po: update po/fa_IR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fa_IR/menu.po
+++ b/po/fa_IR/menu.po
@@ -13,9 +13,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-07 07:56+0000\n"
-"Last-Translator: mahdi shorbi <mahdishorbi@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Persian (Iran) (http://www.transifex.com/civicrm/civicrm/language/fa_IR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -132,8 +132,8 @@ msgid "Case Activity"
 msgstr "فعالیت پرونده"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "گزارش پرونده"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -152,8 +152,8 @@ msgid "Assign to Another Client"
 msgstr "اختصاص به یک مشتری دیگر"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "تبدیل فعالیت به پرونده"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -177,10 +177,6 @@ msgstr "وضعیت پرونده"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "کانال‌های ارتباط"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "تغییر وضعیت فعالیت"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -255,6 +251,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "انواع حساب مالی"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "پرداخت جدید"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -272,9 +272,15 @@ msgstr "کارت های اعتباری قابل قبول"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "مشارکت ها"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "مشارکت مکرر"
@@ -325,6 +331,23 @@ msgstr "دسته‌های حسابداری"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "صادر کردن دسته حسابداری"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "مشاهده پرداخت"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "فاکتور بصورت PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "فاکتور بصورت ایمیل"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -478,6 +501,11 @@ msgstr "تنظیمات جستجو"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "تنظیمات تاریخ"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "منو ناوبری"
 
@@ -511,10 +539,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "یادآوری زمان بندی شده"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "این هرکز دیده نخواهد شد"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -532,6 +556,11 @@ msgstr "فرمت چاپ صفحه (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "فرمت های پست الکترونیک تبریک"
 
@@ -545,8 +574,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "فرمت های آدرس"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "زبان، واحد پول، موقعیت"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -698,10 +728,6 @@ msgid "Administer CiviCRM"
 msgstr "مدیریت سامانه مدیریت ارتباط با مشتریان"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "مقادیر گزینه"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "لیست قیمت"
 
@@ -769,10 +795,6 @@ msgstr "جستجو ساز"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "جستجوهای سفارشی"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "جستجو ساده"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -864,6 +886,10 @@ msgid "CiviCRM Blog"
 msgstr "وبلاگ CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "داشلت مورد"
 
@@ -918,6 +944,10 @@ msgid "Import Activities"
 msgstr "Import فعالیت ها"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "بروز رسانی سامانه مدیریت ارتباط با مشتریان"
 
@@ -954,12 +984,16 @@ msgid "Browse Uploaded files"
 msgstr "مرور فایل های آپلود شده"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "حذف فایل"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "خروچ از سامانه"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "رابط پروتکل نرم افزار"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -973,6 +1007,10 @@ msgstr ""
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "ویرایش مشخصات"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "تایید اطلاعات"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1069,6 +1107,10 @@ msgid "Event Online Registration"
 msgstr "ثبت نام آنلاین رویداد"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "تکرار رویداد"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr ""
 
@@ -1102,6 +1144,10 @@ msgstr "حذف از سبد خرید"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "مشاهده سبد خرید"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1156,8 +1202,8 @@ msgid "Resubscribe"
 msgstr "عضویت مجدد"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "خروجی"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1292,6 +1338,11 @@ msgstr "لیست گزارشات"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "اخبار CiviCRM "
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1430,6 +1481,16 @@ msgstr "یاقتن ارسال انبوه پیام کوتاه"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "تست A/B جدید"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "مدیریت تست های A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "گزارش عضویت ها"
 
@@ -1535,11 +1596,6 @@ msgstr "بومی سازی"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "زبان، واحد پول، موقعیت"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "گزینه های زبان پیش فرض"
 
@@ -1557,6 +1613,11 @@ msgstr "دسترسی ها (کنترل دسترسی)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "تنظیمات سیستم"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1625,6 +1686,11 @@ msgstr "مساعده"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "عضو سیوی"
 
@@ -1635,8 +1701,13 @@ msgstr "گزارش همه موارد"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "راهنما"
+msgid "Support"
+msgstr "پشتیبانی"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1645,18 +1716,43 @@ msgstr "مستندات"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "انجمن"
+msgid "Ask a question"
+msgstr "پرسیدن یک سوال"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "مشارکت"
+msgid "Get expert help"
+msgstr "گرفتن کمک تخصصی"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "درباره"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "برنامه نویس"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "مرورگر رابط پروتکل نرم افزار"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "مدارک برنامه نویس"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1883,6 +1979,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "اطلاعات در مورد وضعیت سهم در محدوده زمانی معین"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "خلاصه عضویت"
 
@@ -2052,144 +2153,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr ""
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "پرداخت جدید"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "مشاهده پرداخت"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
+msgid "Configure CKEditor"
 msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
+msgid "Batch Merge Duplicate Contacts"
 msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "برنامه نویس"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "مرورگر رابط پروتکل نرم افزار"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "مدارک برنامه نویس"
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "فاکتور بصورت PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "فاکتور بصورت ایمیل"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "تنظیمات تاریخ"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "حذف فایل"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "رابط پروتکل نرم افزار"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "تایید اطلاعات"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "تکرار رویداد"
-
-msgctxt "menu"
-msgid "Opt-out"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
-msgstr "تست A/B جدید"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "مدیریت تست های A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "پشتیبانی"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
-msgstr "پرسیدن یک سوال"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "گرفتن کمک تخصصی"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Register your site"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Join CiviCRM"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "اطلاعات در مورد وضعیت سهم در محدوده زمانی معین"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
