--- a/po/fi_FI/extension.po
+++ b/po/fi_FI/extension.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
@@ -29,11 +29,6 @@ msgstr "Hakemistoon ei voi kirjoittaa"
 msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-msgstr ""
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
 msgstr ""
 
 #: CRM/Extension/Browser.php
@@ -56,10 +51,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Tällä hetkellä CiviCRM:n julkisessa laajennushakemistossa ei ole yhtään laajennusta, jotka ovat yhteensopivia version %2 kanssa (<a href=\"%1\">pyydetyt laajennukset täältä</a>). Mikäli haluat asentaa mahdollisesti yhteensopimattomatan laajennuksen, voit yrittää <a href=\"%3\">ladata ja asentaa sen manuaalisesti</a> (riippuen, onko sinulla pääsy palvelimelle).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Yhtään laajennosta ei ole saatavilla tälle versiolle"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -117,6 +108,13 @@ msgid ""
 msgstr ""
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr ""
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr ""
 
@@ -160,9 +158,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr ""
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
 msgstr ""
