--- a/po/fa_IR/queue.po
+++ b/po/fa_IR/queue.po
@@ -1,16 +1,16 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Maghsoud Dorani <dorani583@gmail.com>, 2014
+# MaghsoudDorani <dorani583@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2013-10-08 08:14-0400\n"
-"PO-Revision-Date: 2014-02-01 10:21+0000\n"
-"Last-Translator: Maghsoud Dorani <dorani583@gmail.com>\n"
-"Language-Team: Persian (Iran) (http://www.transifex.com/projects/p/civicrm/language/fa_IR/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Persian (Iran) (http://www.transifex.com/civicrm/civicrm/language/fa_IR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,3 +36,7 @@ msgstr "داده های صف"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "گرداننده صف"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
