--- a/po/fi_FI/provinces.po
+++ b/po/fi_FI/provinces.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
@@ -1879,7 +1879,7 @@ msgid "Burgas"
 msgstr ""
 
 msgctxt "province"
-msgid "Dobric"
+msgid "Dobrich"
 msgstr ""
 
 msgctxt "province"
@@ -1891,19 +1891,19 @@ msgid "Haskovo"
 msgstr ""
 
 msgctxt "province"
-msgid "Jambol"
+msgid "Yambol"
 msgstr ""
 
 msgctxt "province"
-msgid "Kardzali"
+msgid "Kardzhali"
 msgstr ""
 
 msgctxt "province"
-msgid "Kjstendil"
+msgid "Kyustendil"
 msgstr ""
 
 msgctxt "province"
-msgid "Lovec"
+msgid "Lovech"
 msgstr ""
 
 msgctxt "province"
@@ -1939,7 +1939,7 @@ msgid "Sliven"
 msgstr ""
 
 msgctxt "province"
-msgid "Smoljan"
+msgid "Smolyan"
 msgstr ""
 
 msgctxt "province"
@@ -1951,11 +1951,11 @@ msgid "Stara Zagora"
 msgstr ""
 
 msgctxt "province"
-msgid "Sumen"
+msgid "Shumen"
 msgstr ""
 
 msgctxt "province"
-msgid "Targoviste"
+msgid "Targovishte"
 msgstr ""
 
 msgctxt "province"
@@ -1971,7 +1971,7 @@ msgid "Vidin"
 msgstr ""
 
 msgctxt "province"
-msgid "Vraca"
+msgid "Vratsa"
 msgstr ""
 
 msgctxt "province"
@@ -2835,7 +2835,7 @@ msgid "Maule"
 msgstr ""
 
 msgctxt "province"
-msgid "Region Metropolitana de Santiago"
+msgid "Santiago Metropolitan"
 msgstr ""
 
 msgctxt "province"
@@ -6031,7 +6031,7 @@ msgid "Bali"
 msgstr ""
 
 msgctxt "province"
-msgid "Bangka Belitung"
+msgid "Kepulauan Bangka Belitung"
 msgstr ""
 
 msgctxt "province"
@@ -6047,7 +6047,7 @@ msgid "Gorontalo"
 msgstr ""
 
 msgctxt "province"
-msgid "Irian Jaya"
+msgid "Papua Barat"
 msgstr ""
 
 msgctxt "province"
@@ -6139,7 +6139,7 @@ msgid "Sumatera Utara"
 msgstr ""
 
 msgctxt "province"
-msgid "Jakarta Raya"
+msgid "DKI Jakarta"
 msgstr ""
 
 msgctxt "province"
@@ -6147,7 +6147,7 @@ msgid "Aceh"
 msgstr ""
 
 msgctxt "province"
-msgid "Yogyakarta"
+msgid "DI Yogyakarta"
 msgstr ""
 
 msgctxt "province"
@@ -7907,19 +7907,19 @@ msgid "Jelgava"
 msgstr ""
 
 msgctxt "province"
-msgid "Jurmala"
+msgid "Jūrmala"
 msgstr ""
 
 msgctxt "province"
-msgid "Liepaja"
+msgid "Liepāja"
 msgstr ""
 
 msgctxt "province"
-msgid "Rezekne"
+msgid "Rēzekne"
 msgstr ""
 
 msgctxt "province"
-msgid "Riga"
+msgid "Rīga"
 msgstr ""
 
 msgctxt "province"
@@ -9227,7 +9227,7 @@ msgid "Zinder"
 msgstr ""
 
 msgctxt "province"
-msgid "Abuja Capital Territory"
+msgid "Abuja Federal Capital Territory"
 msgstr ""
 
 msgctxt "province"
@@ -9615,7 +9615,7 @@ msgid "Tasman"
 msgstr ""
 
 msgctxt "province"
-msgid "waikato"
+msgid "Waikato"
 msgstr ""
 
 msgctxt "province"
@@ -10687,7 +10687,7 @@ msgid "Chelyabinskaya oblast'"
 msgstr ""
 
 msgctxt "province"
-msgid "Chitinskaya oblast'"
+msgid "Zabaykalsky Krai'"
 msgstr ""
 
 msgctxt "province"
@@ -10707,7 +10707,7 @@ msgid "Kaluzhskaya oblast'"
 msgstr ""
 
 msgctxt "province"
-msgid "Kamchatskaya oblast'"
+msgid "Kamchatka Krai'"
 msgstr ""
 
 msgctxt "province"
@@ -10779,7 +10779,7 @@ msgid "Penzenskaya oblast'"
 msgstr ""
 
 msgctxt "province"
-msgid "Permskaya oblast'"
+msgid "Perm krai'"
 msgstr ""
 
 msgctxt "province"
@@ -10871,15 +10871,7 @@ msgid "Yevreyskaya avtonomnaya oblast'"
 msgstr ""
 
 msgctxt "province"
-msgid "Aginskiy Buryatskiy avtonomnyy"
-msgstr ""
-
-msgctxt "province"
 msgid "Chukotskiy avtonomnyy okrug"
-msgstr ""
-
-msgctxt "province"
-msgid "Evenkiyskiy avtonomnyy okrug"
 msgstr ""
 
 msgctxt "province"
@@ -10887,23 +10879,7 @@ msgid "Khanty-Mansiyskiy avtonomnyy okrug"
 msgstr ""
 
 msgctxt "province"
-msgid "Komi-Permyatskiy avtonomnyy okrug"
-msgstr ""
-
-msgctxt "province"
-msgid "Koryakskiy avtonomnyy okrug"
-msgstr ""
-
-msgctxt "province"
 msgid "Nenetskiy avtonomnyy okrug"
-msgstr ""
-
-msgctxt "province"
-msgid "Taymyrskiy (Dolgano-Nenetskiy)"
-msgstr ""
-
-msgctxt "province"
-msgid "Ust'-Ordynskiy Buryatskiy"
 msgstr ""
 
 msgctxt "province"
@@ -11231,7 +11207,7 @@ msgid "Tristan da Cunha"
 msgstr ""
 
 msgctxt "province"
-msgid "Ajdovscina"
+msgid "Ajdovščina"
 msgstr ""
 
 msgctxt "province"
@@ -11267,7 +11243,7 @@ msgid "Bovec"
 msgstr ""
 
 msgctxt "province"
-msgid "Braslovce"
+msgid "Braslovče"
 msgstr ""
 
 msgctxt "province"
@@ -11279,7 +11255,7 @@ msgid "Brezovica"
 msgstr ""
 
 msgctxt "province"
-msgid "Brezica"
+msgid "Brežice"
 msgstr ""
 
 msgctxt "province"
@@ -11307,15 +11283,15 @@ msgid "Cerkvenjak"
 msgstr ""
 
 msgctxt "province"
-msgid "Crensovci"
+msgid "Črenšovci"
 msgstr ""
 
 msgctxt "province"
-msgid "Crna na Koroskem"
+msgid "Črna na Koroškem"
 msgstr ""
 
 msgctxt "province"
-msgid "Crnomelj"
+msgid "Črnomelj"
 msgstr ""
 
 msgctxt "province"
@@ -11323,7 +11299,7 @@ msgid "Destrnik"
 msgstr ""
 
 msgctxt "province"
-msgid "Divaca"
+msgid "Divača"
 msgstr ""
 
 msgctxt "province"
@@ -11355,7 +11331,7 @@ msgid "Dolenjske Toplice"
 msgstr ""
 
 msgctxt "province"
-msgid "Domzale"
+msgid "Domžale"
 msgstr ""
 
 msgctxt "province"
@@ -11375,7 +11351,7 @@ msgid "Gorenja vas-Poljane"
 msgstr ""
 
 msgctxt "province"
-msgid "Gorsnica"
+msgid "Gorišnica"
 msgstr ""
 
 msgctxt "province"
@@ -11403,15 +11379,15 @@ msgid "Hajdina"
 msgstr ""
 
 msgctxt "province"
-msgid "Hoce-Slivnica"
+msgid "Hoče-Slivnica"
 msgstr ""
 
 msgctxt "province"
-msgid "Hodos"
+msgid "Hodoš"
 msgstr ""
 
 msgctxt "province"
-msgid "Jorjul"
+msgid "Horjul"
 msgstr ""
 
 msgctxt "province"
@@ -11431,11 +11407,11 @@ msgid "Ig"
 msgstr ""
 
 msgctxt "province"
-msgid "IIrska Bistrica"
+msgid "Ilirska Bistrica"
 msgstr ""
 
 msgctxt "province"
-msgid "Ivancna Gorica"
+msgid "Ivančna Gorica"
 msgstr ""
 
 msgctxt "province"
@@ -11451,7 +11427,7 @@ msgid "Jezersko"
 msgstr ""
 
 msgctxt "province"
-msgid "Jursinci"
+msgid "Juršinci"
 msgstr ""
 
 msgctxt "province"
@@ -11463,7 +11439,7 @@ msgid "Kanal"
 msgstr ""
 
 msgctxt "province"
-msgid "Kidricevo"
+msgid "Kidričevo"
 msgstr ""
 
 msgctxt "province"
@@ -11475,7 +11451,7 @@ msgid "Kobilje"
 msgstr ""
 
 msgctxt "province"
-msgid "Jovevje"
+msgid "Kočevje"
 msgstr ""
 
 msgctxt "province"
@@ -11507,11 +11483,11 @@ msgid "Kranjska Gora"
 msgstr ""
 
 msgctxt "province"
-msgid "Krizevci"
+msgid "Križevci"
 msgstr ""
 
 msgctxt "province"
-msgid "Krsko"
+msgid "Krško"
 msgstr ""
 
 msgctxt "province"
@@ -11523,7 +11499,7 @@ msgid "Kuzma"
 msgstr ""
 
 msgctxt "province"
-msgid "Lasko"
+msgid "Laško"
 msgstr ""
 
 msgctxt "province"
@@ -11555,11 +11531,11 @@ msgid "Logatec"
 msgstr ""
 
 msgctxt "province"
-msgid "Loska dolina"
+msgid "Loška dolina"
 msgstr ""
 
 msgctxt "province"
-msgid "Loski Potok"
+msgid "Loški Potok"
 msgstr ""
 
 msgctxt "province"
@@ -11567,7 +11543,7 @@ msgid "Lovrenc na Pohorju"
 msgstr ""
 
 msgctxt "province"
-msgid "Luce"
+msgid "Luče"
 msgstr ""
 
 msgctxt "province"
@@ -11575,7 +11551,7 @@ msgid "Lukovica"
 msgstr ""
 
 msgctxt "province"
-msgid "Majsperk"
+msgid "Majšperk"
 msgstr ""
 
 msgctxt "province"
@@ -11591,7 +11567,7 @@ msgid "Medvode"
 msgstr ""
 
 msgctxt "province"
-msgid "Menges"
+msgid "Mengeš"
 msgstr ""
 
 msgctxt "province"
@@ -11599,11 +11575,11 @@ msgid "Metlika"
 msgstr ""
 
 msgctxt "province"
-msgid "Mezica"
+msgid "Mežica"
 msgstr ""
 
 msgctxt "province"
-msgid "Miklavz na Dravskern polju"
+msgid "Miklavž na Dravskem polju"
 msgstr ""
 
 msgctxt "province"
@@ -11611,7 +11587,7 @@ msgid "Miren-Kostanjevica"
 msgstr ""
 
 msgctxt "province"
-msgid "Mirna Pec"
+msgid "Mirna Peč"
 msgstr ""
 
 msgctxt "province"
@@ -11619,7 +11595,7 @@ msgid "Mislinja"
 msgstr ""
 
 msgctxt "province"
-msgid "Moravce"
+msgid "Moravče"
 msgstr ""
 
 msgctxt "province"
@@ -11651,7 +11627,7 @@ msgid "Nova Gorica"
 msgstr ""
 
 msgctxt "province"
-msgid "Nova mesto"
+msgid "Novo mesto"
 msgstr ""
 
 msgctxt "province"
@@ -11659,7 +11635,7 @@ msgid "Sveta Ana"
 msgstr ""
 
 msgctxt "province"
-msgid "Sveti Andraz v Slovenskih goricah"
+msgid "Sveti Andraž v Slovenskih goricah"
 msgstr ""
 
 msgctxt "province"
@@ -11667,59 +11643,59 @@ msgid "Sveti Jurij"
 msgstr ""
 
 msgctxt "province"
-msgid "Salovci"
+msgid "Šalovci"
 msgstr ""
 
 msgctxt "province"
-msgid "Sempeter-Vrtojba"
+msgid "Šempeter-Vrtojba"
 msgstr ""
 
 msgctxt "province"
-msgid "Sencur"
+msgid "Šenčur"
 msgstr ""
 
 msgctxt "province"
-msgid "Sentilj"
+msgid "Šentilj"
 msgstr ""
 
 msgctxt "province"
-msgid "Sentjernej"
+msgid "Šentjernej"
 msgstr ""
 
 msgctxt "province"
-msgid "Sentjur pri Celju"
+msgid "Šentjur"
 msgstr ""
 
 msgctxt "province"
-msgid "Skocjan"
+msgid "Škocjan"
 msgstr ""
 
 msgctxt "province"
-msgid "Skofja Loka"
+msgid "Škofja Loka"
 msgstr ""
 
 msgctxt "province"
-msgid "Skoftjica"
+msgid "Škofljica"
 msgstr ""
 
 msgctxt "province"
-msgid "Smarje pri Jelsah"
+msgid "Šmarje pri Jelšah"
 msgstr ""
 
 msgctxt "province"
-msgid "Smartno ob Paki"
+msgid "Šmartno ob Paki"
 msgstr ""
 
 msgctxt "province"
-msgid "Smartno pri Litiji"
+msgid "Šmartno pri Litiji"
 msgstr ""
 
 msgctxt "province"
-msgid "Sostanj"
+msgid "Šoštanj"
 msgstr ""
 
 msgctxt "province"
-msgid "Store"
+msgid "Štore"
 msgstr ""
 
 msgctxt "province"
@@ -11727,7 +11703,7 @@ msgid "Tabor"
 msgstr ""
 
 msgctxt "province"
-msgid "Tisina"
+msgid "Tišina"
 msgstr ""
 
 msgctxt "province"
@@ -11735,7 +11711,7 @@ msgid "Tolmin"
 msgstr ""
 
 msgctxt "province"
-msgid "Trbovje"
+msgid "Trbovlje"
 msgstr ""
 
 msgctxt "province"
@@ -11747,7 +11723,7 @@ msgid "Trnovska vas"
 msgstr ""
 
 msgctxt "province"
-msgid "Trzic"
+msgid "Tržič"
 msgstr ""
 
 msgctxt "province"
@@ -11755,7 +11731,7 @@ msgid "Trzin"
 msgstr ""
 
 msgctxt "province"
-msgid "Turnisce"
+msgid "Turnišče"
 msgstr ""
 
 msgctxt "province"
@@ -11767,11 +11743,11 @@ msgid "Velika Polana"
 msgstr ""
 
 msgctxt "province"
-msgid "Velika Lasce"
+msgid "Velike Lašče"
 msgstr ""
 
 msgctxt "province"
-msgid "Verzej"
+msgid "Veržej"
 msgstr ""
 
 msgctxt "province"
@@ -11807,35 +11783,35 @@ msgid "Zagorje ob Savi"
 msgstr ""
 
 msgctxt "province"
-msgid "Zavrc"
+msgid "Zavrč"
 msgstr ""
 
 msgctxt "province"
-msgid "Zrece"
+msgid "Zreče"
 msgstr ""
 
 msgctxt "province"
-msgid "Zalec"
+msgid "Žalec"
 msgstr ""
 
 msgctxt "province"
-msgid "Zelezniki"
+msgid "Železniki"
 msgstr ""
 
 msgctxt "province"
-msgid "Zetale"
+msgid "Žetale"
 msgstr ""
 
 msgctxt "province"
-msgid "Ziri"
+msgid "Žiri"
 msgstr ""
 
 msgctxt "province"
-msgid "Zirovnica"
+msgid "Žirovnica"
 msgstr ""
 
 msgctxt "province"
-msgid "Zuzemberk"
+msgid "Žužemberk"
 msgstr ""
 
 msgctxt "province"
@@ -15263,339 +15239,11 @@ msgid "Valmiera"
 msgstr ""
 
 msgctxt "province"
-msgid "Santiago Metropolitan"
-msgstr ""
-
-msgctxt "province"
-msgid "Abuja Federal Capital Territory"
-msgstr ""
-
-msgctxt "province"
-msgid "Waikato"
-msgstr ""
-
-msgctxt "province"
-msgid "Zabaykalsky Krai'"
-msgstr ""
-
-msgctxt "province"
-msgid "Kamchatka Krai'"
-msgstr ""
-
-msgctxt "province"
-msgid "Perm krai'"
-msgstr ""
-
-msgctxt "province"
 msgid "Pieria"
 msgstr ""
 
 msgctxt "province"
 msgid "Arica y Parinacota"
-msgstr ""
-
-msgctxt "province"
-msgid "Dobrich"
-msgstr ""
-
-msgctxt "province"
-msgid "Yambol"
-msgstr ""
-
-msgctxt "province"
-msgid "Kardzhali"
-msgstr ""
-
-msgctxt "province"
-msgid "Kyustendil"
-msgstr ""
-
-msgctxt "province"
-msgid "Lovech"
-msgstr ""
-
-msgctxt "province"
-msgid "Smolyan"
-msgstr ""
-
-msgctxt "province"
-msgid "Shumen"
-msgstr ""
-
-msgctxt "province"
-msgid "Targovishte"
-msgstr ""
-
-msgctxt "province"
-msgid "Vratsa"
-msgstr ""
-
-msgctxt "province"
-msgid "Kepulauan Bangka Belitung"
-msgstr ""
-
-msgctxt "province"
-msgid "Papua Barat"
-msgstr ""
-
-msgctxt "province"
-msgid "DKI Jakarta"
-msgstr ""
-
-msgctxt "province"
-msgid "DI Yogyakarta"
-msgstr ""
-
-msgctxt "province"
-msgid "Jūrmala"
-msgstr ""
-
-msgctxt "province"
-msgid "Liepāja"
-msgstr ""
-
-msgctxt "province"
-msgid "Rēzekne"
-msgstr ""
-
-msgctxt "province"
-msgid "Rīga"
-msgstr ""
-
-msgctxt "province"
-msgid "Ajdovščina"
-msgstr ""
-
-msgctxt "province"
-msgid "Braslovče"
-msgstr ""
-
-msgctxt "province"
-msgid "Brežice"
-msgstr ""
-
-msgctxt "province"
-msgid "Črenšovci"
-msgstr ""
-
-msgctxt "province"
-msgid "Črna na Koroškem"
-msgstr ""
-
-msgctxt "province"
-msgid "Črnomelj"
-msgstr ""
-
-msgctxt "province"
-msgid "Divača"
-msgstr ""
-
-msgctxt "province"
-msgid "Domžale"
-msgstr ""
-
-msgctxt "province"
-msgid "Gorišnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Hoče-Slivnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Hodoš"
-msgstr ""
-
-msgctxt "province"
-msgid "Horjul"
-msgstr ""
-
-msgctxt "province"
-msgid "Ilirska Bistrica"
-msgstr ""
-
-msgctxt "province"
-msgid "Ivančna Gorica"
-msgstr ""
-
-msgctxt "province"
-msgid "Juršinci"
-msgstr ""
-
-msgctxt "province"
-msgid "Kidričevo"
-msgstr ""
-
-msgctxt "province"
-msgid "Kočevje"
-msgstr ""
-
-msgctxt "province"
-msgid "Križevci"
-msgstr ""
-
-msgctxt "province"
-msgid "Krško"
-msgstr ""
-
-msgctxt "province"
-msgid "Laško"
-msgstr ""
-
-msgctxt "province"
-msgid "Loška dolina"
-msgstr ""
-
-msgctxt "province"
-msgid "Loški Potok"
-msgstr ""
-
-msgctxt "province"
-msgid "Luče"
-msgstr ""
-
-msgctxt "province"
-msgid "Majšperk"
-msgstr ""
-
-msgctxt "province"
-msgid "Mengeš"
-msgstr ""
-
-msgctxt "province"
-msgid "Mežica"
-msgstr ""
-
-msgctxt "province"
-msgid "Miklavž na Dravskem polju"
-msgstr ""
-
-msgctxt "province"
-msgid "Mirna Peč"
-msgstr ""
-
-msgctxt "province"
-msgid "Moravče"
-msgstr ""
-
-msgctxt "province"
-msgid "Novo mesto"
-msgstr ""
-
-msgctxt "province"
-msgid "Sveti Andraž v Slovenskih goricah"
-msgstr ""
-
-msgctxt "province"
-msgid "Šalovci"
-msgstr ""
-
-msgctxt "province"
-msgid "Šempeter-Vrtojba"
-msgstr ""
-
-msgctxt "province"
-msgid "Šenčur"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentilj"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentjernej"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentjur"
-msgstr ""
-
-msgctxt "province"
-msgid "Škocjan"
-msgstr ""
-
-msgctxt "province"
-msgid "Škofja Loka"
-msgstr ""
-
-msgctxt "province"
-msgid "Škofljica"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmarje pri Jelšah"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmartno ob Paki"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmartno pri Litiji"
-msgstr ""
-
-msgctxt "province"
-msgid "Šoštanj"
-msgstr ""
-
-msgctxt "province"
-msgid "Štore"
-msgstr ""
-
-msgctxt "province"
-msgid "Tišina"
-msgstr ""
-
-msgctxt "province"
-msgid "Trbovlje"
-msgstr ""
-
-msgctxt "province"
-msgid "Tržič"
-msgstr ""
-
-msgctxt "province"
-msgid "Turnišče"
-msgstr ""
-
-msgctxt "province"
-msgid "Velike Lašče"
-msgstr ""
-
-msgctxt "province"
-msgid "Veržej"
-msgstr ""
-
-msgctxt "province"
-msgid "Zavrč"
-msgstr ""
-
-msgctxt "province"
-msgid "Zreče"
-msgstr ""
-
-msgctxt "province"
-msgid "Žalec"
-msgstr ""
-
-msgctxt "province"
-msgid "Železniki"
-msgstr ""
-
-msgctxt "province"
-msgid "Žetale"
-msgstr ""
-
-msgctxt "province"
-msgid "Žiri"
-msgstr ""
-
-msgctxt "province"
-msgid "Žirovnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Žužemberk"
 msgstr ""
 
 msgctxt "province"
@@ -15896,4 +15544,192 @@ msgstr ""
 
 msgctxt "province"
 msgid "Shida Kartli"
+msgstr ""
+
+msgctxt "province"
+msgid "Harjumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Hiiumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Ida-Virumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Jõgevamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Järvamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Läänemaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Lääne-Virumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Põlvamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Pärnumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Raplamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Saaremaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Tartumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Viljandimaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Võrumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Klaipėdos Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Marijampolės Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Panevėžio Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Šiaulių Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Tauragės Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Telšių Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Bataan"
+msgstr ""
+
+msgctxt "province"
+msgid "Al Bahah"
+msgstr ""
+
+msgctxt "province"
+msgid "Al Hudud Ash Shamaliyah"
+msgstr ""
+
+msgctxt "province"
+msgid "Blekinge län"
+msgstr ""
+
+msgctxt "province"
+msgid "Dalarnas län"
+msgstr ""
+
+msgctxt "province"
+msgid "Gotlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Gävleborgs län"
+msgstr ""
+
+msgctxt "province"
+msgid "Hallands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Jämtlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Jönkopings län"
+msgstr ""
+
+msgctxt "province"
+msgid "Kalmar län"
+msgstr ""
+
+msgctxt "province"
+msgid "Kronobergs län"
+msgstr ""
+
+msgctxt "province"
+msgid "Norrbottens län"
+msgstr ""
+
+msgctxt "province"
+msgid "Skåne län"
+msgstr ""
+
+msgctxt "province"
+msgid "Stockholms län"
+msgstr ""
+
+msgctxt "province"
+msgid "Södermanlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Uppsala län"
+msgstr ""
+
+msgctxt "province"
+msgid "Värmlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västerbottens län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västernorrlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västmanlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västra Götalands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Örebro län"
+msgstr ""
+
+msgctxt "province"
+msgid "Östergötlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Phuket"
+msgstr ""
+
+msgctxt "province"
+msgid "Northern Ostrobothnia"
+msgstr ""
+
+msgctxt "province"
+msgid "Telangana"
 msgstr ""
