--- a/po/fr_CA/batch.po
+++ b/po/fr_CA/batch.po
@@ -11,11 +11,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:45-0400\n"
-"PO-Revision-Date: 2015-03-14 21:59+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: French (Canada) (http://www.transifex.com/projects/p/civicrm/"
-"language/fr_CA/)\n"
+"Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,6 +36,10 @@ msgstr "Voir / ajouter des transactions au lot"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Ré-ouvrir lot"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -63,134 +66,8 @@ msgid "No export format selected."
 msgstr "Aucun format d'exportation sélectionné."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr ""
-
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr ""
-
-#: CRM/Batch/Form/Batch.php
-msgid "Batch Deleted"
-msgstr "lot supprimé"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Profile for bulk data entry is missing."
-msgstr "Le  profil de la saisie des données en masse est manquante."
-
-#: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Contributions"
-msgstr "Entrée en lot de contributions"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Memberships"
-msgstr "Entrée en lot des adhésions"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Ignore Mismatch & Process the Batch?"
-msgstr ""
-"Ignorer les entrées non-correspondantes et continuer avec le traitement du "
-"lot ?"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Validate & Process the Batch"
-msgstr "Valider et traiter le lot"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr ""
-
-#: CRM/Batch/Form/Entry.php
-msgid "Soft credit amount should not be greater than the total amount"
-msgstr ""
-"Le montant du crédit indirect ne doit pas être supérieur à la quantité totale"
-
-#: CRM/Batch/Form/Entry.php
-msgid "Membership type is a required field."
-msgstr "Type d'adhésion est un champ obligatoire."
-
-#: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
-msgid ""
-"Total for amounts entered below does not match the expected batch total."
-msgstr ""
-"Le montant total entré ci-dessous ne correspond pas au montant total attendu."
-
-#: CRM/Batch/Form/Entry.php
-msgid "Batch Processed."
-msgstr "Lot traité."
-
-#: CRM/Batch/Page/Batch.php
-msgid "Batch Processing"
-msgstr "Traitement en lot"
-
-#: templates/CRM/Batch/Form/Batch.tpl
-msgid "Delete Data Entry Batch"
-msgstr "Supprimer lot d'entrées de donnée"
-
-#: templates/CRM/Batch/Form/Batch.tpl
-msgid "Edit Data Entry Batch"
-msgstr "Éditer lot d'entrées de donnée"
-
-#: templates/CRM/Batch/Form/Batch.tpl templates/CRM/Batch/Form/Search.tpl
-msgid "New Data Entry Batch"
-msgstr "Nouveau lot d'entrées de donnée"
-
-#: templates/CRM/Batch/Form/Batch.tpl
-msgid ""
-"WARNING: Deleting this batch will result in the loss of all data entered for "
-"the batch."
-msgstr ""
-"AVERTISSEMENT : La suppression de ce traitement en lot entraînera la perte "
-"de toutes les données de ce lot."
-
-#: templates/CRM/Batch/Form/Entry.tpl
-msgid ""
-"Click Validate & Process below when you've entered all items for the batch. "
-"You can also Save & Continue Later at any time. Go to Administer > Customize "
-"Data and Screens > Profiles > Reserved Profiles > to add, remove or change "
-"the order of columns."
-msgstr ""
-"Cliquez sur Valider et traiter ci-dessous lorsque vous avez saisi tous les "
-"éléments du lot. Vous pouvez également enregistrer et continuer plus tard à "
-"tout moment. Allez dans Administrer> Personnaliser données et écrans> "
-"Profils> Profils réservés> pour ajouter, supprimer ou modifier l'ordre des "
-"colonnes."
-
-#: templates/CRM/Batch/Form/Entry.tpl
-msgid "Total amount expected"
-msgstr "Montant total attendu"
-
-#: templates/CRM/Batch/Form/Entry.tpl
-msgid "Total amount entered"
-msgstr "Montant total entré"
-
-#: templates/CRM/Batch/Form/Search.tpl
-msgid "Data Entry Batches"
-msgstr "Lots d'entrées de données"
-
-#: templates/CRM/Batch/Form/Search.tpl
-msgid "Complete OR partial batch name."
-msgstr "Nom complet OU partiel du traitement en lot"
-
-#: templates/CRM/Batch/Form/Search.tpl
-msgid "No matching Data Entry Batches found for your search criteria."
-msgstr "Aucun lot d'entrées de données -import- correspondant à vos critères"
-
-#: templates/CRM/Batch/Form/Search.tpl
-msgid "You do not have any Open Data Entry Batches."
-msgstr "Vous n'avez pas de lots de saisie de données ouverts."
-
-#: templates/CRM/Batch/Form/Search.tpl
-msgid "No Data Entry Batches have been created for this site."
-msgstr "Aucun lot de saisie de données n'a été créé pour ce site."
-
-#: CRM/Batch/DAO/Batch.php
 msgid "Batch ID"
 msgstr "ID du lot"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Titre du lot"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Description"
@@ -236,14 +113,148 @@ msgstr "Date d'exportation du lot"
 msgid "Batch Data"
 msgstr "Données du lot"
 
+#: CRM/Batch/Form/Batch.php
+msgid "Batch Deleted"
+msgstr "lot supprimé"
+
+#: CRM/Batch/Form/Entry.php
+msgid "Profile for bulk data entry is missing."
+msgstr "Le  profil de la saisie des données en masse est manquante."
+
+#: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Contributions"
+msgstr "Entrée en lot de contributions"
+
+#: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Memberships"
+msgstr "Entrée en lot des adhésions"
+
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Pledge Payments"
 msgstr ""
 
 #: CRM/Batch/Form/Entry.php
+msgid "Ignore Mismatch & Process the Batch?"
+msgstr "Ignorer les entrées non-correspondantes et continuer avec le traitement du lot ?"
+
+#: CRM/Batch/Form/Entry.php
+msgid "Validate & Process the Batch"
+msgstr "Valider et traiter le lot"
+
+#: CRM/Batch/Form/Entry.php
+msgid "Soft credit amount should not be greater than the total amount"
+msgstr "Le montant du crédit indirect ne doit pas être supérieur à la quantité totale"
+
+#: CRM/Batch/Form/Entry.php
+msgid "Membership type is a required field."
+msgstr "Type d'adhésion est un champ obligatoire."
+
+#: CRM/Batch/Form/Entry.php
 msgid "You can not record two payments for the same pledge in a single batch."
 msgstr ""
 
+#: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Total for amounts entered below does not match the expected batch total."
+msgstr "Le montant total entré ci-dessous ne correspond pas au montant total attendu."
+
+#: CRM/Batch/Form/Entry.php
+msgid "Batch Processed."
+msgstr "Lot traité."
+
+#: CRM/Batch/Page/Batch.php
+msgid "Batch Processing"
+msgstr "Traitement en lot"
+
+#: templates/CRM/Batch/Form/Batch.tpl
+msgid "Delete Data Entry Batch"
+msgstr "Supprimer lot d'entrées de donnée"
+
+#: templates/CRM/Batch/Form/Batch.tpl
+msgid "Edit Data Entry Batch"
+msgstr "Éditer lot d'entrées de donnée"
+
+#: templates/CRM/Batch/Form/Batch.tpl templates/CRM/Batch/Form/Search.tpl
+msgid "New Data Entry Batch"
+msgstr "Nouveau lot d'entrées de donnée"
+
+#: templates/CRM/Batch/Form/Batch.tpl
+msgid ""
+"WARNING: Deleting this batch will result in the loss of all data entered for"
+" the batch."
+msgstr "AVERTISSEMENT : La suppression de ce traitement en lot entraînera la perte de toutes les données de ce lot."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time. Go to Administer > Customize"
+" Data and Screens > Profiles > Reserved Profiles > to add, remove or change "
+"the order of columns."
+msgstr "Cliquez sur Valider et traiter ci-dessous lorsque vous avez saisi tous les éléments du lot. Vous pouvez également enregistrer et continuer plus tard à tout moment. Allez dans Administrer> Personnaliser données et écrans> Profils> Profils réservés> pour ajouter, supprimer ou modifier l'ordre des colonnes."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Total amount expected"
+msgstr "Montant total attendu"
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Total amount entered"
+msgstr "Montant total entré"
+
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Open Pledges (Due Date - Amount)"
+msgstr ""
+
+#: templates/CRM/Batch/Form/Search.tpl
+msgid "Data Entry Batches"
+msgstr "Lots d'entrées de données"
+
+#: templates/CRM/Batch/Form/Search.tpl
+msgid "Complete OR partial batch name."
+msgstr "Nom complet OU partiel du traitement en lot"
+
+#: templates/CRM/Batch/Form/Search.tpl
+msgid "No matching Data Entry Batches found for your search criteria."
+msgstr "Aucun lot d'entrées de données -import- correspondant à vos critères"
+
+#: templates/CRM/Batch/Form/Search.tpl
+msgid "You do not have any Open Data Entry Batches."
+msgstr "Vous n'avez pas de lots de saisie de données ouverts."
+
+#: templates/CRM/Batch/Form/Search.tpl
+msgid "No Data Entry Batches have been created for this site."
+msgstr "Aucun lot de saisie de données n'a été créé pour ce site."
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Method"
+msgstr ""
+
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
+
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
+
+#: CRM/Batch/Form/Entry.php
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
 msgstr ""
