--- a/po/fi_FI/queue.po
+++ b/po/fi_FI/queue.po
@@ -1,17 +1,19 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# ottok <otto@seravo.fi>, 2013
-# Tomi Toivio <tomi@flossmanuals.net>, 2013
+# Otto Kekäläinen <otto@seravo.fi>, 2013
+# Otto Kekäläinen <otto@seravo.fi>, 2013
+# Tomi Toivio <tomi@sange.fi>, 2013
+# Tomi Toivio <tomi@sange.fi>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2013-10-08 08:14-0400\n"
-"PO-Revision-Date: 2013-11-15 08:31+0000\n"
-"Last-Translator: ottok <otto@seravo.fi>\n"
-"Language-Team: Finnish (http://www.transifex.com/projects/p/civicrm/language/fi/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,3 +39,7 @@ msgstr "Jonottavien tiedot"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Jonon suorittaja"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
