po: update po/fr_CA/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/install.po
+++ b/po/fr_CA/install.po
@@ -3,14 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
 # samuelsov <samuel@koumbit.org>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-11-26 18:49+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:00+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -117,17 +117,27 @@ msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
-msgstr ""
+msgstr "La valeur de auto_increment_increment est-elle 1 ?"
 
 #: install/index.php
 msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
-msgstr ""
+msgstr "Une valeur de auto_increment_increment plus grande que 1 n'est pas présentement supporté par CiviCRM. Veuillez consulter le billet CRM-7923 pour plus d'information."
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr "Le nom de la base de données est-il valide ?"
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr "Le nom de la base de donné n'est pas valide. Veuillez utiliser un nom composé uniquement des caractères 0-9, a-z, A-Z et _ (sans accents, espaces ou autres caractères spéciaux)."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
-msgstr ""
+msgstr "La configuration thread_stack de MySQL est-elle suffisante ? (%1k)"
 
 #: install/index.php
 msgid "Can I access/create the database?"
@@ -139,7 +149,7 @@ msgstr "Je ne peux pas créer de nouvelles base de données et la base '%1' n'ex
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr ""
+msgstr "Est-il possible d'accéder/créer des tables InnoDB dans la base de données ?"
 
 #: install/index.php
 msgid ""
@@ -168,7 +178,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr ""
+msgstr "Est-il possible de créer des déclencheurs (triggers) dans la base de données ?"
 
 #: install/index.php
 msgid ""
@@ -206,7 +216,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Folder '%1' exists?"
-msgstr ""
+msgstr "Le dossier « %1 » existe-t-il ?"
 
 #: install/index.php
 msgid "There is no '%1' folder."
@@ -290,11 +300,11 @@ msgstr ""
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "Le fichier « %1 » n'a pas été trouvé."
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "Le fichier « %1 » a été trouvé."
 
 #: install/index.php
 msgid ""
@@ -314,19 +324,19 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "Le serveur MySQL supporte-t-il InnoDB ?"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Il n'a pas été possible de déterminer si le serveur MySQL supporte InnoDB."
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr ""
+msgstr "Il n'a pas été possible de s'authentifier à la base de données."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "Il n'a pas été possible de sélectionner la base de données."
 
 #: install/index.php
 msgid "Could not create a temp table."
@@ -412,7 +422,7 @@ msgstr ""
 
 #: install/index.php
 msgid "CiviCRM Installed"
-msgstr ""
+msgstr "CiviCRM a été installé"
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
@@ -450,7 +460,7 @@ msgstr "Installation de CiviCRM"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Version %1"
 
 #: install/template.html
 msgid ""
