--- a/po/fr_CA/extension.po
+++ b/po/fr_CA/extension.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -28,11 +28,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr ""
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "Pas de recherche d'extension sur l'URL distante car ext_repo_url est configuré à faux."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -54,10 +49,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Il n'y a présentement aucune extension sur le répertoire public des extensions CiviCRM qui soit compatible avec la version %2 (<a href=\"%1\"> demandé extensions partir d'ici </ a>). Si vous voulez installer une extension qui n'est pas marqué comme compatible, vous pourrez peut-être <a href=\"%3\"> télécharger et installer les extensions manuellement </ a> (en fonction de l'accès à votre serveur web)."
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Pas extensions disponibles pour cette version"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -115,6 +106,13 @@ msgid ""
 msgstr ""
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr ""
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr ""
 
@@ -158,9 +156,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr ""
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
 msgstr ""
