--- a/po/fr_CA/queue.po
+++ b/po/fr_CA/queue.po
@@ -1,18 +1,17 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Mathieu Lutfy <mathieu@bidon.ca>, 2016
 # Stéphane Lussier <stephane@koumbit.org>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2013-01-24 14:54-0500\n"
-"PO-Revision-Date: 2012-12-17 21:09+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@koumbit.org>\n"
-"Language-Team: French (Canada) (http://www.transifex.com/projects/p/civicrm/"
-"language/fr_CA/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:17+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,3 +37,7 @@ msgstr "Items"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Régisseur de file"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr "ID de file"
