po: update po/fr_FR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/pledge.po
+++ b/po/fr_FR/pledge.po
@@ -14,9 +14,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 13:01+0000\n"
-"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,11 +55,11 @@ msgid "Pledge Payment Status"
 msgstr "État de paiement périodique"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
+msgid "%1 - due on %2 (overdue)"
 msgstr "%1 $ - exigible le %2 (en retard)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
+msgid "%1 - due on %2"
 msgstr "%1 $ - exigible le %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
@@ -84,14 +84,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Périodicité"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "État de l'engagement de don %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "État de paiement périodique %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "L'engagement est un test"
 
@@ -102,6 +94,10 @@ msgstr "Type financier - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Page finances - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "Identifiant de contact %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -151,10 +147,6 @@ msgstr "Date de modification de la promesse de don"
 msgid "Pledge Cancelled Date"
 msgstr "Date d'annulation de la promesse de don"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Contact de la personne honorée par la promesse de don"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Nombre maximum de rappels"
@@ -193,12 +185,12 @@ msgid "Reminders Sent"
 msgstr "Rappels envoyés"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Modifier un paiement planifié"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "L'échéancier de versement des dons a été mis à jour."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Engagement de don fait par"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -305,6 +297,10 @@ msgid "Pledger Name or Email"
 msgstr "Nom ou adresse électronique de la personne faisant l'engagement de don"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Nom de la personne faisant l'engagement de don"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Rechercher des engagements de don"
 
@@ -313,12 +309,10 @@ msgid "Delete Pledges"
 msgstr "Supprimer les engagements de don"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Engagement(s) supprimé(s): %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Total engagement(s) sélectionné(s) : %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count de promesses de don supprimées."
+msgstr[1] "%count de promesses de don supprimées."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -327,6 +321,30 @@ msgstr "Imprimer la liste de engagements de don"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Moteur de CiviCRM Pledge"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "Accéder à CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Visualiser les promesses de don"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "Editer les promesses de don"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Créer et mettre à jour les promesses de don"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "supprimer dans CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Supprimer les promesses de don"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -344,11 +362,11 @@ msgid ""
 "pledge payments."
 msgstr "Annuler cet engagement de don va aussi annuler tous les paiements planifiés et non encore effectués."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Consulter l'engagement de don"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Modifier l'engagement de don"
 
@@ -356,7 +374,7 @@ msgstr "Modifier l'engagement de don"
 msgid "Cancel Pledge"
 msgstr "Annuler l'engagement de don"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Supprimer l'engagement de don"
 
@@ -377,20 +395,12 @@ msgid "Pledge Search"
 msgstr "Rechercher des engagements de don"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Imprimer les engagements de don"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Exporter les engagements de don"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Modifier un paiement planifié"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Date planifiée de paiement"
+msgid "Adjust scheduled amount"
+msgstr "Changer le montant des versements programmés"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -399,10 +409,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Vous ne serez pas en mesure d'envoyer un accusé de réception pour cet engagement de don car il n'y a pas d'adresse électronique enregistrée pour ce contact. Si vous voulez qu'un accusé de réception soit envoyé lorsque vous aurez enregistré cet engagement, cliquez sur Annuler, puis cliquez sur Éditer depuis l'onglet Résumé pour ajouter une adresse électronique avant d'enregistrer cet engagement."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nouvel engagement de don"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -419,6 +425,10 @@ msgid ""
 msgstr "Vous devriez plutôt annuler l'engagement de don afin de conserver vos données et éviter de perdre des données de paiement. Pour faire passer la promesse dans l'état Annulée et annuler toutes les échéances non encore payées, cliquez d'abord sur Annuler sur cette page, puis cliquez sur le lien Plus depuis la liste de engagements et sélectionnez l'action d'annulation."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Engagement de don fait par"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -426,6 +436,7 @@ msgid ""
 msgstr "Le total de l'engagement de don a changé à cause de changements faits à des échéances. Le montant promis original était de %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "Échéances de"
 
@@ -448,10 +459,6 @@ msgstr "Date de la première échéance de paiement."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Envoi automatique d'un courriel d'accusé de réception de cet engagement de don à %1 ?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Envoi automatique d'un courriel d'accusé de réception de cet engagement de don à "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -477,20 +484,12 @@ msgstr "Les engagements de don restent dans l'état «En attente » jusqu'à ce 
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Cliquez sur OK pour enregistrer cet engagement de don ET envoyer un accusé de réception maintenant à %1"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Cliquer sur OK pour enregistrer la promesse de don ET envoyer une confirmation to %1 maintenant."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Engagement de don par"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "Échéances de paiement de "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "tous les"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -517,10 +516,6 @@ msgid "Payments Ended Date"
 msgstr "Date de fin des paiements"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Aucun engagement de don trouvé."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -533,8 +528,16 @@ msgid ""
 msgstr "Si vous êtes en train de rechercher dans un intervalle de temps ou de montants, essayez d'élargir l'intervalle."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Cliquez sur %1 pour consulter les paiements de l'engagement de don."
+msgid "Click arrow to view pledge payments."
+msgstr "Cliquer sur la flèche pour voir les paiements de la promesse de don"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Visualiser les paiements"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Masquer les paiements"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -554,10 +557,6 @@ msgstr "À payer"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Date de début"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Engagement de don faite"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -608,20 +607,12 @@ msgid "Amount Paid"
 msgstr "Montant payé"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Consulter le paiement</a>"
+msgid "Credit Card Payment"
+msgstr "Paiement par carte de crédit"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Enregistrer le paiement (chèque, espèces, virement, etc.)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Payer par carte bancaire</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Éditer le paiement planifié</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Modifier le paiement programmé"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -641,9 +632,10 @@ msgstr "Pour que les rappels soient envoyés :"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "L'administrateur de votre site doit configurer le script fourni qui effectue les mises à jour des statuts des paiements périodiques et envoie les rappels (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Votre administrateur doit configurer le programme (Administrer > Paramètres système > Travaux programmés) qui met à jour le statut des paiements d'une promesse de don et qui envoit un email de rappel."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -663,13 +655,17 @@ msgstr "Engagements reçus de %1 depuis le début."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Cliquez sur <a href='%1'>Créer un engagement de don</a> pour enregistrer une nouvelle promesse reçue de ce contact."
+msgstr "Cliquer sur <a %1> Ajouter une promesse de don</a> pour enregistrer une nouvelle promesse de don reçu par ce contat."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Aucun engagement de don enregistré pour ce contact."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -795,94 +791,38 @@ msgstr "Merci pour votre soutien généreux."
 msgid "Pledge Payment Reminder"
 msgstr "Rappel de paiement d'engagement de don"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 $ - exigible le %2 (en retard)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 $ - exigible le %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Promesses de don suprimées: %1 (Nombre total sélectionné: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Changer le montant des versements programmés"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Cliquer sur OK pour enregistrer la promesse de don ET envoyer une confirmation to %1 maintenant."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Cliquer sur la flèche pour voir les paiements de la promesse de don"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Visualiser les paiements"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Masquer les paiements"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Paiement par carte de crédit"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Modifier le paiement programmé"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Votre administrateur doit configurer le programme (Administrer > Paramètres système > Travaux programmés) qui met à jour le statut des paiements d'une promesse de don et qui envoit un email de rappel."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Cliquer sur <a %1> Ajouter une promesse de don</a> pour enregistrer une nouvelle promesse de don reçu par ce contat."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "Identifiant de contact %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "Nom de la personne faisant l'engagement de don"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count de promesses de don supprimées."
-msgstr[1] "%count de promesses de don supprimées."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "Accéder à CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Visualiser les promesses de don"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "Editer les promesses de don"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Créer et mettre à jour les promesses de don"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "supprimer dans CiviPledge"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Supprimer les promesses de don"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
